[build-system]
requires = ["setuptools"]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[project]
name = "dqm"
authors = [{name = "Zander Teller", email = "zander@zanderteller.net"}]
description = "Dynamic Quantum Mapping"
version = "0.1.0"
packages = ["dqm"]
#dynamic = ["version", "description"]
